# gla-client

./: .gitattributes  .gitignore  Cargo.toml  INSTALL.md  README.md
crates/agent-bin/: Cargo.toml  build.rs
crates/agent-bin/assets/: app.rc
crates/agent-bin/src/: config.rs  main.rs  pairing.rs  paths.rs  platform.rs
crates/collector-core/: Cargo.toml
crates/collector-core/src/: lib.rs
crates/durable-queue/: Cargo.toml
crates/durable-queue/examples/: seed_queue.rs
crates/durable-queue/src/: config.rs  error.rs  lib.rs  queue.rs
crates/durable-queue/tests/: queue_tests.rs
crates/event-contract/: Cargo.toml
crates/event-contract/examples/: emit_legacy_wire.rs
crates/event-contract/src/: envelope.rs  ids.rs  legacy_wire.rs  lib.rs  payload.rs  quarantine.rs  validation.rs
crates/event-contract/tests/: contract_tests.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/examples/: lifecycle_tray_demo.rs  single_instance_demo.rs
crates/lifecycle/src/: autostart.rs  crash_detection.rs  crash_restart.rs  lib.rs  power_events.rs  rotating_log.rs  single_instance.rs
crates/linux-collector/: Cargo.toml
crates/linux-collector/examples/: linux_collector_demo.rs  linux_resource_soak.rs
crates/linux-collector/src/: collector.rs  environment.rs  evdev_counter.rs  gnome_extension.rs  hyprland.rs  input_counters.rs  input_events.rs  lib.rs  native_loop.rs  process_name.rs
crates/linux-collector/src/x11/: active_window.rs  idle.rs  mod.rs
crates/macos-collector/: Cargo.toml
crates/macos-collector/src/: active_app.rs  collector.rs  idle.rs  input_counter.rs  lib.rs  native_loop.rs  permissions.rs
crates/normalization/: Cargo.toml
crates/normalization/src/: aggregation.rs  categories.rs  lib.rs  title_classifier.rs
crates/normalization/tests/: acceptance_criteria_tests.rs  golden_fixture_tests.rs
crates/normalization/tests/fixtures/: bucket_accumulation_scenarios.json  categorize_cases.json  classify_title_cases.json  processes_for_category.json
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs  linux.rs  permissions.rs  rotation.rs  secret_string.rs  store.rs  windows.rs
crates/ui-shell/: Cargo.toml
crates/ui-shell/examples/: tray_demo.rs
crates/ui-shell/src/: browser.rs  icons.rs  lib.rs  menu_model.rs  status.rs  tray.rs
crates/update-manifest/: Cargo.toml
crates/update-manifest/src/: cache.rs  decision.rs  lib.rs  manifest.rs  rollout.rs  signing.rs
crates/update-manifest/tests/: integration.rs
crates/updater/: Cargo.toml
crates/updater/examples/: update_bench.rs
crates/updater/src/: diagnostics.rs  disk_space.rs  download.rs  health.rs  lib.rs  restart_policy.rs  staging.rs  telemetry.rs
crates/updater/tests/: integration.rs
crates/uploader/: Cargo.toml
crates/uploader/examples/: upload_once.rs
crates/uploader/src/: backoff.rs  lib.rs  transport.rs  uploader.rs
crates/uploader/tests/: uploader_tests.rs
crates/windows-collector/: Cargo.toml
crates/windows-collector/examples/: collector_demo.rs  resource_soak.rs
crates/windows-collector/src/: browser_title.rs  collector.rs  foreground.rs  hooks.rs  idle.rs  input_counters.rs  lib.rs  native_loop.rs
installer/linux/arch/: PKGBUILD  growth-layer-agent-git.install
installer/linux/deb/: build.sh  postinst
installer/linux/gnome-extension/: extension.js  metadata.json
installer/linux/keys/: gen-signing-key.batch  growth-layer-agent-signing-key.pub.asc
installer/linux/repo/: build_apt_repo.sh
installer/linux/rpm/: build.sh  growth-layer-agent.spec  sign.sh
installer/linux/tarball/: build.sh  growth-layer-agent.desktop  install.sh  uninstall.sh
installer/macos/: Info.plist  build_app_bundle.sh  build_dmg.sh  codesign_and_notarize.sh  com.growthlayer.agent.plist  entitlements.plist
installer/windows/: agent.iss
scripts/perf-bench/: budgets.json  run.ps1  run.sh
scripts/rel-smoke/: e2e_real_backend.sh  run.ps1  run.sh
