[workspace]
resolver = "2"
members = ["crates/event-contract", "crates/durable-queue", "crates/uploader", "crates/normalization", "crates/ui-shell", "crates/lifecycle", "crates/collector-core", "crates/windows-collector", "crates/linux-collector", "crates/macos-collector", "crates/agent-bin"]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
