[package]
name = "agent-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "The unified growth-layer-agent.exe: wires windows-collector, normalization, durable-queue, uploader, lifecycle, and ui-shell into one running process — the installable artifact AG-WIN-002 packages."

[[bin]]
name = "growth-layer-agent"
path = "src/main.rs"

[dependencies]
event-contract = { path = "../event-contract" }
durable-queue = { path = "../durable-queue" }
uploader = { path = "../uploader" }
normalization = { path = "../normalization" }
lifecycle = { path = "../lifecycle" }
ui-shell = { path = "../ui-shell" }
windows-collector = { path = "../windows-collector" }
chrono = { version = "0.4", features = ["clock"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
