[package]
name = "agent-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "The unified growth-layer-agent binary: wires a platform signal collector (windows-collector or linux-collector), normalization, durable-queue, uploader, lifecycle, and ui-shell into one running process — the installable artifact AG-WIN-002/AG-LNX-003 package."

[[bin]]
name = "growth-layer-agent"
path = "src/main.rs"

[dependencies]
event-contract = { path = "../event-contract" }
durable-queue = { path = "../durable-queue" }
uploader = { path = "../uploader" }
normalization = { path = "../normalization" }
lifecycle = { path = "../lifecycle" }
ui-shell = { path = "../ui-shell" }
collector-core = { path = "../collector-core" }
secrets = { path = "../secrets" }
chrono = { version = "0.4", features = ["clock"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-collector = { path = "../windows-collector" }

[target.'cfg(target_os = "linux")'.dependencies]
linux-collector = { path = "../linux-collector" }
# systemd's default `KillSignal` for `systemctl --user stop`/`restart` is
# SIGTERM — without a handler for it, that normal service stop looks
# identical to a crash on next startup (found by AG-LNX-003's
# independent review). signal-hook is the standard safe way to react to
# a Unix signal from ordinary Rust code (it moves the actual work off the
# raw signal handler via a self-pipe, so there's no async-signal-safety
# tightrope to walk here).
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
macos-collector = { path = "../macos-collector" }
