[package]
name = "durable-queue"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Crash-safe, corruption-isolating local event queue shared by every agent-core platform collector."

[dependencies]
event-contract = { path = "../event-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
thiserror = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
