[package]
name = "normalization"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Port of the Python MVP's process categorization, title classification, and bucket-aggregation logic."

[dependencies]
event-contract = { path = "../event-contract" }
chrono = { version = "0.4", features = ["clock"], default-features = false }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
