[package]
name = "secrets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AG-SEC-001: OS secure storage for the device auth token (Windows Credential Manager / Linux Secret Service), token rotation policy, device revoke, log-safe SecretString, and file-permission hardening."

[dependencies]
thiserror = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Zeroizes the token's memory on drop — defense in depth against a
# memory scrape/core dump reading it after the value should be gone.
# Found by AG-SEC-001's independent review as a real, non-blocking gap
# (SecretString redacted Debug/Display but didn't clear its own
# backing memory) — closed here, not deferred.
zeroize = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Credentials", "Win32_Foundation"] }

# The `secret-service` crate talks to the real freedesktop.org Secret
# Service D-Bus API (gnome-keyring/kwallet) via zbus — `rt-async-io-crypto-rust`
# picks zbus's async-io reactor (not tokio, consistent with this
# project's "no async runtime" preference elsewhere — uploader/updater
# use blocking `ureq` for the same reason) plus a pure-Rust crypto
# backend (not OpenSSL, avoiding a native TLS-style linking dependency
# for what's otherwise a pure-Rust cross-platform workspace). The
# crate's own `blocking` module then exposes a synchronous-looking API
# on top, matching `linux-collector`'s existing `zbus::blocking` usage.
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", default-features = false, features = ["rt-async-io-crypto-rust"] }

[dev-dependencies]
