[package]
name = "ui-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Minimal cross-platform tray status/diagnostics shell — no embedded dashboard, no heavy UI (see ADR 0013)."

[dependencies]
chrono = { version = "0.4", features = ["clock"], default-features = false }
tray-icon = "0.19"
winit = "0.30"
open = "5"
thiserror = "1"

[dev-dependencies]
