[package]
name = "update-manifest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AG-UPD-001: signed, channel-aware update manifest — verification, downgrade-attack rejection, deterministic rollout, safe local cache. Platform-agnostic (no OS-specific code — that's AG-UPD-002's job)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
